[package]
name = "librecollect"
version = "0.3.1"
license = "MIT"
authors = ["Kaiyang Wu <self@origincode.me>"]
edition = "2021"
description = "Recollection library for the project"
repository = "https://factoria.origincode.me/OriginCode/recollection"
homepage = "https://factoria.origincode.me/OriginCode/recollection"
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.12"
thiserror = "1.0"
notify-rust = "4"
chrono = { version = "0.4", features = ["serde"] }
