[package]
name = "recollectctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.librecollect]
path = "../librecollect"
version = "0.1.0"

[dependencies]
dirs = "4.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.10"