[package]
name = "recollectctl"
version = "0.1.0"
license = "MIT"
authors = ["Kaiyang Wu <self@origincode.me>"]
edition = "2021"
description = "Recollection CLI manager for Recollection events"
repository = "https://factoria.origincode.me/OriginCode/recollection"
homepage = "https://factoria.origincode.me/OriginCode/recollection"
readme = "../README.md"

[dependencies.librecollect]
path = "../librecollect"
version = "0.2.0"

[dependencies]
dirs = "4.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.10"
