[package]
name = "recollectd"
version = "0.3.2"
license = "MIT"
authors = ["Kaiyang Wu <self@origincode.me>"]
edition = "2021"
description = "Recollection daemon for sending notifications"
repository = "https://factoria.origincode.me/OriginCode/recollection"
homepage = "https://factoria.origincode.me/OriginCode/recollection"
readme = "../README.md"

[dependencies.librecollect]
path = "../librecollect"
version = "0.3"

[dependencies]
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.5"
serde_json = "1"
signal-hook = "0.3"
notify-debouncer-full = "0.3.1"
